--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             border: 2px solid rgb(49, 48, 48);
             transition: all 1s;
             padding: 2px;
+            color: black;
         }
 
         .icon:hover {
@@ -244,20 +245,21 @@
             </div>
         </div>
         <div class="row content">
-            <div class="col-lg-2 col-md-12 col-sm-12"></div>
-            <div class="col-lg-4 col-md-12 col-sm-12 pt-5 mt-5  px-4">
+            <div class="col-lg-2  col-sm-12"></div>
+            <div class="col-lg-4 col-md-6 col-sm-12 pt-5 mt-5  px-4">
                 <b class="fs-1">Full-Stack Developer </b>
                 <p class="fs-5 pt-5">Hi! I am Tushika Srivastava. A full-stack developer based in Lucknow, India.
                     <i class="fa-solid fa-location-dot"></i>
                 </p>
-                <p class="fs-2"><i class="fa-brands fa-linkedin icon">
-                        <a href="https://www.linkedin.com/in/tushika-srivastava-software-developer/"></a></i> <i
-                        class="fa-brands fa-github icon"></i></p>
+               <p class="fs-2">
+                        <a href="https://www.linkedin.com/in/tushika-srivastava-software-developer/"><i class="fa-brands fa-linkedin icon"></i></a>
+                        <a href="https://github.com/Tushika-Sri"><i class="fa-brands fa-github icon"></i></a>
+                </p>
             </div>
-            <div class="col-lg-4 col-md-12  col-sm-12 pt-5 px-4">
+            <div class="col-lg-4 col-md-6  col-sm-12 pt-5 px-4">
                 <img src="images/letsee2.jpeg" alt="" height="400px" class="br">
             </div>
-            <div class="col-lg-2 col-md-12 col-sm-12"></div>
+            <div class="col-lg-2 col-sm-12"></div>
         </div>
 
 
@@ -354,8 +356,9 @@
 
                                 </div>
                                 <div class="col-sm-6 fs-4 txt">
+                                    <p> <b class="text-success">+</b>Content Writer</p>
                                     <p> <b class="text-success">+</b>HTML/CSS/JS</p>
-                                    <p> <b class="text-success">+</b>Bootstrap</p>
+                            
 
 
                                 </div>
@@ -466,9 +469,7 @@
                             <div><img src="images/shopwat.jpg" alt="" class="img-thumbnail"></div>
                             <div style="text-align: justify;">
                                 <p style="font-size: 28px;text-align: center;">SHOPPING SITE </p>
-                                <p>I've woven a tapestry of pixels and code, transforming concepts into interactive
-                                    realities. From the alchemy of HTML and CSS to the sorcery of Bootstrap, I've honed
-                                    my skills to create seamless and immersive online shopping webpage.
+                                <p>I've woven a tapestry of pixels and code, transforming concepts into interactive realities. From the alchemy of HTML and CSS to the sorcery of Bootstrap, I've honed my skills to create seamless and immersive online shopping webpage.
 
                                 </p>
                             </div>
@@ -476,7 +477,7 @@
                                 <div class="col-6"><a href="task7.html" class="btn  float-start skillbtn">View Live</a>
                                 </div>
                                 <div class="col-6"> <a href="https://github.com/Tushika-Sri/Shopping"
-                                        class="btn skillbtn float-end">View on Github</a></div>
+                                        class="btn skillbtn float-end">On Github</a></div>
                             </div>
                         </div>
                         <div class="col-sm-1"></div>
@@ -489,15 +490,13 @@
                             <div><img src="images/portwat.jpg" alt="" class="img-thumbnail"></div>
                             <div style="text-align: justify;">
                                 <p style="font-size: 28px;text-align: center;">RESPONSIVE PORTFOLIO </p>
-                                <p> Built using technologies HTML, CSS, JS, BOOTSTRAP-it's grid system to create a responsive layout that automatically
-                                    adjusts to different screen sizes. Use responsive image classes to optimize image
-                                    loading on various screen sizes.
+                                <p> Built using technologies HTML, CSS, JS, BOOTSTRAP-it's grid system to create a responsive layout that automatically adjusts to different screen sizes. Use responsive image classes to optimize image loading on various screen sizes.
 
                                 </p>
                             </div>
                             <div class="row pt-3 pb-4">
                                 <div class="col-6"><a href="#" class="btn skillbtn float-start">View Live</a></div>
-                                <div class="col-6"> <a href="#" class="btn skillbtn float-end">View on Github</a></div>
+                                <div class="col-6"> <a href="#" class="btn skillbtn float-end">On Github</a></div>
                             </div>
 
                         </div>
@@ -511,15 +510,13 @@
                             <div><img src="images/zeptowat.jpg" alt="" class="img-thumbnail"></div>
                             <div style="text-align: justify;">
                                 <p style="font-size: 28px;text-align: center;">GlideCart WEBSITE </p>
-                                <p >
-                                    GlideCart is an online platform built with Django and powered by
-                                    Python to provide lightning-fast delivery. Implemented responsive design 
-                                    principles to ensure optimal user experience across various devices.
+                                <p>
+                                    GlideCart is an online platform built with Django and powered by Python to provide lightning-fast delivery services where I  have implemented responsive design principles to ensure optimal user experience across various devices.
                                 </p>
                             </div>
                             <div class="row pt-3 pb-4">
                                 <div class="col-6"><a href="#" class="btn skillbtn float-start">View Live</a></div>
-                                <div class="col-6"> <a href="#" class="btn skillbtn float-end">View on Github</a></div>
+                                <div class="col-6"> <a href="#" class="btn skillbtn float-end">On Github</a></div>
                             </div>
                         </div>
                         <div class="col-sm-1"></div>
