--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                                 </p>
                             </div>
                             <div class="row pt-3 pb-4">
-                                <div class="col-6"><a href="task7.html" class="btn  float-start skillbtn">View Live</a>
+                                <div class="col-6"><a href="shopping.html" class="btn  float-start skillbtn">View Live</a>
                                 </div>
                                 <div class="col-6"> <a href="https://github.com/Tushika-Sri/Shopping"
                                         class="btn skillbtn float-end">On Github</a></div>
@@ -496,7 +496,7 @@
                             </div>
                             <div class="row pt-3 pb-4">
                                 <div class="col-6"><a href="#" class="btn skillbtn float-start">View Live</a></div>
-                                <div class="col-6"> <a href="#" class="btn skillbtn float-end">On Github</a></div>
+                                <div class="col-6"> <a href="https://github.com/Tushika-Sri/Hostport/" class="btn skillbtn float-end">On Github</a></div>
                             </div>
 
                         </div>
@@ -515,8 +515,8 @@
                                 </p>
                             </div>
                             <div class="row pt-3 pb-4">
-                                <div class="col-6"><a href="#" class="btn skillbtn float-start">View Live</a></div>
-                                <div class="col-6"> <a href="#" class="btn skillbtn float-end">On Github</a></div>
+                                <div class="col-6"><a href="https://github.com/Tushika-Sri/GlideCart/" class="btn skillbtn float-start">View Live</a></div>
+                                <div class="col-6"> <a href="https://github.com/Tushika-Sri/GlideCart/" class="btn skillbtn float-end">On Github</a></div>
                             </div>
                         </div>
                         <div class="col-sm-1"></div>
