Added project links

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                             <div class="row">
                                 <div class="col-sm-6 fs-4 txt">
                                     <p> <b class="text-success">+</b>Web Developer</p>
-                                    <p> <b class="text-success">+</b>Wordpress</p>
+                                    <p> <b class="text-success">+</b>MERN | Django</p>
 
                                 </div>
                                 <div class="col-sm-6 fs-4 txt">
@@ -381,78 +381,74 @@
                         <h4 class="text-light">HTML</h4>
                         <div class="progress mt-1 mb-1 bg-dark" role="progressbar" aria-label="Basic example"
                             aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"
-                            style="height: 20px; border-radius: 15px; padding: 2px 15 2px 2px;">
+                            style="height: 15px; border-radius: 15px; padding: 2px 15 2px 2px;">
                             <div class="progress-bar"
                                 style="width: 100%; border-radius: 15px;background-color: #039BE5;"></div>
                         </div>
                         <h4 class="text-light">CSS</h4>
                         <div class="progress mt-1 mb-1 bg-dark" role="progressbar" aria-label="Basic example"
                             aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"
-                            style="height: 20px; border-radius: 15px; padding: 2px 15 2px 2px;">
+                            style="height: 15px; border-radius: 15px; padding: 2px 15 2px 2px;">
                             <div class="progress-bar bg-info" style="width: 100%; border-radius: 15px;"></div>
                         </div>
 
                         <h4 class="text-light">JAVASCRIPT</h4>
                         <div class="progress  mt-1 mb-1 bg-dark" role="progressbar" aria-label="Basic example"
                             aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
-                            style="height: 20px; border-radius: 15px; padding: 2px 15 2px 2px;">
+                            style="height: 15px; border-radius: 15px; padding: 2px 15 2px 2px;">
                             <div class="progress-bar"
                                 style="width: 100%; border-radius: 15px;background-color: #2196F3;"></div>
                         </div>
-                        <h4 class="text-light">JQUERY</h4>
+                        <h4 class="text-light">React</h4>
                         <div class="progress mt-1 mb-1 bg-dark" role="progressbar" aria-label="Basic example"
-                            aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
-                            style="height: 20px; border-radius: 15px; padding: 2px 15 2px 2px;">
+                            aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"
+                            style="height: 15px; border-radius: 15px; padding: 2px 15 2px 2px;">
                             <div class="progress-bar"
-                                style="width: 75%; border-radius: 15px;background-color: #26A69A;"></div>
+                                style="width: 85%; border-radius: 15px;background-color: #26A69A;"></div>
                         </div>
                         <h4 class="text-light">BOOTSTRAP</h4>
                         <div class="progress mt-1 mb-1 bg-dark" role="progressbar" aria-label="Basic example"
                             aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"
-                            style="height: 20px; border-radius: 15px;  padding: 2px 15 2px 2px;">
+                            style="height: 15px; border-radius: 15px;  padding: 2px 15 2px 2px;">
                             <div class="progress-bar bg-success" style="width: 100%; border-radius: 15px;"></div>
                         </div>
                         <h4 class="text-light">PYTHON</h4>
                         <div class="progress mt-1 mb-1 bg-dark" role="progressbar" aria-label="Basic example"
-                            aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"
-                            style="height: 20px; border-radius: 15px;  padding: 2px 15 2px 2px;">
+                            aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"
+                            style="height: 15px; border-radius: 15px;  padding: 2px 15 2px 2px;">
                             <div class="progress-bar"
-                                style="width: 100%; border-radius: 15px;background-color: #2962FF;"></div>
+                                style="width: 85%; border-radius: 15px;background-color: #2962FF;"></div>
                         </div>
                         <h4 class="text-light">JAVA</h4>
                         <div class="progress mt-1 mb-1 bg-dark" role="progressbar" aria-label="Basic example"
                             aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"
-                            style="height: 20px; border-radius: 15px;  padding: 2px 15 2px 2px;">
+                            style="height: 15px; border-radius: 15px;  padding: 2px 15 2px 2px;">
                             <div class="progress-bar"
                                 style="width: 100%; border-radius: 15px;background-color: #2962FF;"></div>
                         </div>
-                        <h4 class="text-light">C</h4>
+                        <h4 class="text-light">MERN</h4>
                         <div class="progress mt-1 mb-1 bg-dark" role="progressbar" aria-label="Basic example"
-                            aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"
+                            aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"
                             style="height: 20px; border-radius: 15px;  padding: 2px 15 2px 2px;">
                             <div class="progress-bar"
-                                style="width: 100%; border-radius: 15px;background-color: #2962FF;"></div>
+                                style="width: 95%; border-radius: 15px;background-color: #2962FF;"></div>
                         </div>
-                        <h4 class="text-light">SQL</h4>
+                        <h4 class="text-light">MySQL</h4>
                         <div class="progress mt-1 mb-1 bg-dark" role="progressbar" aria-label="Basic example"
                             aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"
-                            style="height: 20px; border-radius: 15px;  padding: 2px 15 2px 2px;">
+                            style="height: 15px; border-radius: 15px;  padding: 2px 15 2px 2px;">
                             <div class="progress-bar"
                                 style="width: 100%; border-radius: 15px;background-color: #2962FF;"></div>
                         </div>
                         <h4 class="text-light">Django</h4>
                         <div class="progress mt-1 mb-1 bg-dark" role="progressbar" aria-label="Basic example"
-                            aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"
-                            style="height: 20px; border-radius: 15px;  padding: 2px 15 2px 2px;">
+                            aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"
+                            style="height: 15px; border-radius: 15px;  padding: 2px 15 2px 2px;">
                             <div class="progress-bar"
-                                style="width: 80%; border-radius: 15px;background-color: #2962FF;"></div>
+                                style="width: 85%; border-radius: 15px;background-color: #2962FF;"></div>
                         </div>
-
                     </div>
                 </div>
-
-
-
             </div>
         </div>
 
@@ -469,9 +465,7 @@
                             <div><img src="images/shopwat.jpg" alt="" class="img-thumbnail"></div>
                             <div style="text-align: justify;">
                                 <p style="font-size: 28px;text-align: center;">SHOPPING SITE </p>
-                                <p>I've woven a tapestry of pixels and code, transforming concepts into interactive realities. From the alchemy of HTML and CSS to the sorcery of Bootstrap, I've honed my skills to create seamless and immersive online shopping webpage.
-
-                                </p>
+                                <p>Developed a visually appealing online shopping site using HTML, CSS, and Bootstrap, ensuring a seamless, user-friendly experience and engaging interface.</p>
                             </div>
                             <div class="row pt-3 pb-4">
                                 <div class="col-6"><a href="shopping.html" class="btn  float-start skillbtn">View Live</a>
@@ -490,9 +484,7 @@
                             <div><img src="images/portwat.jpg" alt="" class="img-thumbnail"></div>
                             <div style="text-align: justify;">
                                 <p style="font-size: 28px;text-align: center;">RESPONSIVE PORTFOLIO </p>
-                                <p> Built using technologies HTML, CSS, JS, BOOTSTRAP-it's grid system to create a responsive layout that automatically adjusts to different screen sizes. Use responsive image classes to optimize image loading on various screen sizes.
-
-                                </p>
+                                <p> Crafted with HTML, CSS, JS, and Bootstrap's grid system to create a responsive layout that adjusts seamlessly to different screen sizes for optimal performance.</p>
                             </div>
                             <div class="row pt-3 pb-4">
                                 <div class="col-6"><a href="#" class="btn skillbtn float-start">View Live</a></div>
@@ -510,12 +502,10 @@
                             <div><img src="images/zeptowat.jpg" alt="" class="img-thumbnail"></div>
                             <div style="text-align: justify;">
                                 <p style="font-size: 28px;text-align: center;">GlideCart WEBSITE </p>
-                                <p>
-                                    GlideCart is an online platform built with Django and powered by Python to provide lightning-fast delivery services where I  have implemented responsive design principles to ensure optimal user experience across various devices.
-                                </p>
+                                <p>GlideCart is a revolutionary online platform built with Django and powered by Python to provide lightning-fast delivery services, ensuring that customers receive their orders swiftly.</p>
                             </div>
                             <div class="row pt-3 pb-4">
-                                <div class="col-6"><a href="https://github.com/Tushika-Sri/GlideCart/" class="btn skillbtn float-start">View Live</a></div>
+                                <div class="col-6"><a href="https://glidecart.onrender.com" class="btn skillbtn float-start">View Live</a></div>
                                 <div class="col-6"> <a href="https://github.com/Tushika-Sri/GlideCart/" class="btn skillbtn float-end">On Github</a></div>
                             </div>
                         </div>
