--- a/index.html
+++ b/index.html
@@ -197,6 +197,11 @@
         .conbtn:hover {
             box-shadow: rgb(172, 172, 172) 5px 5px 10px 0px inset, rgb(255, 255, 255) -5px -5px 10px 0px inset;
         }
+        .img-size {
+    width: 100%;
+    height: 250px; /* Set a fixed height for all images */
+    object-fit: cover; /* Ensure the images maintain their aspect ratio without distortion */
+}
     </style>
 </head>
 
@@ -462,11 +467,10 @@
                     <div class="row py-5 my-1">
                         <div class="col-sm-1 "></div>
                         <div class="col-sm-10 skillbr p-3 ">
-                            <div><img src="images/shopwat.jpg" alt="" class="img-thumbnail"></div>
+                            <div><img src="images/shopwat.jpg" alt="" class="img-thumbnail img-size"></div>
                             <div style="text-align: justify;">
                                 <p style="font-size: 28px;text-align: center;">SHOPPING SITE </p>
-                                <p>Developed a visually appealing online shopping site using HTML, CSS, and Bootstrap, ensuring a seamless, user-friendly experience and engaging interface.</p>
-                            </div>
+                                </div>
                             <div class="row pt-3 pb-4">
                                 <div class="col-6"><a href="shopping.html" class="btn  float-start skillbtn">View Live</a>
                                 </div>
@@ -481,29 +485,10 @@
                     <div class="row py-5 my-1">
                         <div class="col-sm-1"></div>
                         <div class="col-sm-10 skillbr p-3 ">
-                            <div><img src="images/portwat.jpg" alt="" class="img-thumbnail"></div>
+                            <div><img src="images/zeptowat.jpg" alt="" class="img-thumbnail img-size"></div>
                             <div style="text-align: justify;">
-                                <p style="font-size: 28px;text-align: center;">RESPONSIVE PORTFOLIO </p>
-                                <p> Crafted with HTML, CSS, JS, and Bootstrap's grid system to create a responsive layout that adjusts seamlessly to different screen sizes for optimal performance.</p>
-                            </div>
-                            <div class="row pt-3 pb-4">
-                                <div class="col-6"><a href="#" class="btn skillbtn float-start">View Live</a></div>
-                                <div class="col-6"> <a href="https://github.com/Tushika-Sri/Hostport/" class="btn skillbtn float-end">On Github</a></div>
-                            </div>
-
-                        </div>
-                        <div class="col-sm-1"></div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-12 pro ">
-                    <div class="row py-5 my-1">
-                        <div class="col-sm-1"></div>
-                        <div class="col-sm-10 skillbr p-3 ">
-                            <div><img src="images/zeptowat.jpg" alt="" class="img-thumbnail"></div>
-                            <div style="text-align: justify;">
-                                <p style="font-size: 28px;text-align: center;">GlideCart WEBSITE </p>
-                                <p>GlideCart is a revolutionary online platform built with Django and powered by Python to provide lightning-fast delivery services, ensuring that customers receive their orders swiftly.</p>
-                            </div>
+                                <p style="font-size: 28px;text-align: center;">GlideCart Website </p>
+                               </div>
                             <div class="row pt-3 pb-4">
                                 <div class="col-6"><a href="https://glidecart.onrender.com" class="btn skillbtn float-start">View Live</a></div>
                                 <div class="col-6"> <a href="https://github.com/Tushika-Sri/GlideCart/" class="btn skillbtn float-end">On Github</a></div>
@@ -512,7 +497,23 @@
                         <div class="col-sm-1"></div>
                     </div>
                 </div>
+                <div class="col-md-4 col-sm-12 pro ">
+                    <div class="row py-5 my-1">
+                        <div class="col-sm-1"></div>
+                        <div class="col-sm-10 skillbr p-3 ">
+                            <div><img src="images/DALL·E 2025-02-01 22.13.08 - t.webp" alt="" class="img-thumbnail img-size"></div>
+                            <div style="text-align: justify;">
+                                <p style="font-size: 28px;text-align: center;">WanderLust </p>
+                                </div>
+                            <div class="row pt-3 pb-4">
+                                <div class="col-6"><a href="#" class="btn skillbtn float-start">View Live</a></div>
+                                <div class="col-6"> <a href="https://github.com/Tushika-Sri/WanderLust/" class="btn skillbtn float-end">On Github</a></div>
+                            </div>
 
+                        </div>
+                        <div class="col-sm-1"></div>
+                    </div>
+                </div>
 
 
 
